# pythonweb_09

./: pyproject.toml  requirements.txt
main/main/: settings.py
main/main/spiders/: authors.py
src/: bs_main.py  main.py  models.py  quotes.json
